--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,10 @@ dvc-objects==5.1.2
 dvc-render==1.0.2
 dvc-studio-client==0.22.0
 dvc-task==0.40.2
+pandas
+numpy
+scikit-learn
+xgboost
+matplotlib
+seaborn
+shap
